fixed list overflow

--- a/src/styles/List.module.css
+++ b/src/styles/List.module.css
@@ -6,6 +6,7 @@
   padding: 1rem 0;
   min-width: 30rem;
   max-width: 100%;
+  overflow: hidden;
 }
 
 .title {
@@ -60,6 +61,8 @@
 }
 
 .createButton {
+  flex-grow: 0;
+  flex-shrink: 0;
   padding: 0 2rem;
 }
 
